Fix spacing

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -163,7 +163,7 @@
 .card__information-volume-pricing-note--button + .global-settings-popup.quantity-popover__info {
   transform: initial;
   top: auto;
-  bottom: 4rem;
+  bottom: 3.5rem;
 }
 
 .card-information > *:not(.visually-hidden:first-child) + quantity-popover:not(.rating):not(.card__information-volume-pricing-note), .card-information .card__information-volume-pricing-note.card__information-volume-pricing-note--button {
